Adding the streamlit app and recommendation engine

--- a/code/02-modeling.ipynb
+++ b/code/02-modeling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "46d26407-965e-4da8-abd1-35859741f962",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "6044966a-2ea2-42e8-ae66-d24ebbd2a2c3",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "bebfba7c-a0e5-4552-b9c9-aa5091eeeb28",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "bd52a341-4ada-4767-9b47-ccde1dd39d2e",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,11 +482,421 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8f2909fa-c67e-4935-8c2b-fba2e9c41914",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (5). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SpectralClustering(gamma=0.5, n_clusters=5, n_init=5, n_jobs=-1)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Build out the final model based on the best parameters found\n",
+    "spec = SpectralClustering(gamma=0.5, n_clusters=5, n_init=5, n_jobs=-1)\n",
+    "spec.fit(X_sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7caf51dc-3d07-4998-9a5a-ac1927060cfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5184634551759015"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "silhouette_score(X_sc, spec.labels_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88944cec-c843-4ce2-9aae-c54d4a77f32b",
+   "metadata": {},
+   "source": [
+    "In the interest of creating a more granular clustering model, I will also try creating a model with more clusters than the `SpectralClustering` model recommends for this data so that recommendations will be more precise:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "db0e071c-19cd-4e1e-aa2a-22b5481e8c72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (5) found smaller than n_clusters (30). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SpectralClustering(gamma=0.5, n_clusters=30, n_init=5, n_jobs=-1)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Trying out more clusters for a more granular model\n",
+    "spec = SpectralClustering(gamma=0.5, n_clusters=30, n_init=5, n_jobs=-1)\n",
+    "spec.fit(X_sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c5c295f7-2738-415e-9241-44a15b4d41db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.505810616398999"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "silhouette_score(X_sc, spec.labels_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "58eedf4d-f2eb-4fcc-bbf1-f949dcf07e2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (5) found smaller than n_clusters (70). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.505810616398999"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spec = SpectralClustering(gamma=0.5, n_clusters=70, n_init=5, n_jobs=-1)\n",
+    "spec.fit(X_sc)\n",
+    "silhouette_score(X_sc, spec.labels_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "196b3595-f329-4cc8-bff0-f97d944f6171",
+   "metadata": {},
+   "source": [
+    "The number of clusters doesn't seem to have as much of an effect on the silhouette score as previously thought. This is great news, as this will allow for a more granular model with more precise ans specific recommendations.\n",
+    "\n",
+    "To create these recommendations, I will need to predict the clusters for both the X data and the user inputted entry. For `X`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9b9de4b0-a97e-4403-8538-956b035b2687",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create predicted cluster column and recombine the data with the id column \n",
+    "X = pd.concat([X, species], axis=1)\n",
+    "X['cluster'] = spec.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "976bae0a-b2de-47dc-9fc9-9eb9fb504d92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Growth_Rate</th>\n",
+       "      <th>Lifespan</th>\n",
+       "      <th>Toxicity</th>\n",
+       "      <th>Drought_Tolerance</th>\n",
+       "      <th>Hedge_Tolerance</th>\n",
+       "      <th>Moisture_Use</th>\n",
+       "      <th>pH_Minimum</th>\n",
+       "      <th>pH_Maximum</th>\n",
+       "      <th>Salinity_Tolerance</th>\n",
+       "      <th>Shade_Tolerance</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Bloom_Period_Mid Summer</th>\n",
+       "      <th>Bloom_Period_Spring</th>\n",
+       "      <th>Bloom_Period_Summer</th>\n",
+       "      <th>Bloom_Period_Winter</th>\n",
+       "      <th>Bloom_Period_nan</th>\n",
+       "      <th>Fire_Resistance_Yes</th>\n",
+       "      <th>Fire_Resistance_nan</th>\n",
+       "      <th>id</th>\n",
+       "      <th>Scientific_Name_x</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Abies balsamea (L.) Mill.</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Abies concolor (Gord. &amp; Glend.) Lindl. ex Hild...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Abies fraseri (Pursh) Poir.</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>62</td>\n",
+       "      <td>Abies grandis (Douglas ex D. Don) Lindl.</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Abelia ×grandiflora (Rovelli ex André) Rehder</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 279 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Growth_Rate  Lifespan  Toxicity  Drought_Tolerance  Hedge_Tolerance  \\\n",
+       "0            1         1         0                  1                1   \n",
+       "1            1         3         0                  2                1   \n",
+       "2            2         2         0                  1                1   \n",
+       "3            2         3         0                  2                1   \n",
+       "4            3         2         0                  2                3   \n",
+       "\n",
+       "   Moisture_Use  pH_Minimum  pH_Maximum  Salinity_Tolerance  Shade_Tolerance  \\\n",
+       "0             2         4.0         6.0                   0                2   \n",
+       "1             2         5.5         7.8                   0                1   \n",
+       "2             2         3.5         5.5                   1                2   \n",
+       "3             2         4.5         7.5                   0                2   \n",
+       "4             2         5.7         7.0                   1                2   \n",
+       "\n",
+       "   ...  Bloom_Period_Mid Summer  Bloom_Period_Spring  Bloom_Period_Summer  \\\n",
+       "0  ...                        1                    0                    0   \n",
+       "1  ...                        0                    0                    0   \n",
+       "2  ...                        0                    0                    0   \n",
+       "3  ...                        0                    0                    0   \n",
+       "4  ...                        0                    0                    0   \n",
+       "\n",
+       "   Bloom_Period_Winter  Bloom_Period_nan  Fire_Resistance_Yes  \\\n",
+       "0                    0                 0                    0   \n",
+       "1                    0                 0                    0   \n",
+       "2                    0                 0                    0   \n",
+       "3                    0                 0                    1   \n",
+       "4                    0                 0                    0   \n",
+       "\n",
+       "   Fire_Resistance_nan  id                                  Scientific_Name_x  \\\n",
+       "0                    0  21                          Abies balsamea (L.) Mill.   \n",
+       "1                    0  40  Abies concolor (Gord. & Glend.) Lindl. ex Hild...   \n",
+       "2                    0  55                        Abies fraseri (Pursh) Poir.   \n",
+       "3                    0  62           Abies grandis (Douglas ex D. Don) Lindl.   \n",
+       "4                    0  65      Abelia ×grandiflora (Rovelli ex André) Rehder   \n",
+       "\n",
+       "   cluster  \n",
+       "0        5  \n",
+       "1        5  \n",
+       "2        5  \n",
+       "3        5  \n",
+       "4        5  \n",
+       "\n",
+       "[5 rows x 279 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bde6fdba-1d18-44b3-a555-62591ba4c647",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now for a sample user input - create a function to replicate the flask app\n",
+    "def plant_input():\n",
+    "    # Create dummy entry to feed into the clustering model\n",
+    "    dummy = pd.DataFrame()\n",
+    "    \n",
+    "    # Inputs\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
