--- a/code/01-data-cleaning.ipynb
+++ b/code/01-data-cleaning.ipynb
@@ -807,14 +807,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "be3c9dd5-1f4b-48f8-81c9-b1054ab190fb",
-   "metadata": {},
-   "source": [
-    "I pulled the following function from [this Kaggle submission.](https://www.kaggle.com/taolearnstolearn/a-single-pipeline-with-lasso-regression) This will allow me to create a dictionary of numeric values to map to the unique strings contained in each feature."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "52e0150d-42e7-4e72-a03a-83a010af891c",
@@ -973,6 +965,14 @@
     "   # Unique keys for Growth Rate and Lifespan\n",
     "   'Slow':1, 'Short':1, 'Long':3, 'Rapid':3\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be3c9dd5-1f4b-48f8-81c9-b1054ab190fb",
+   "metadata": {},
+   "source": [
+    "I pulled the following function from [this Kaggle submission.](https://www.kaggle.com/taolearnstolearn/a-single-pipeline-with-lasso-regression) This will allow me to map values to the unique strings contained in each feature."
    ]
   },
   {
