--- a/code/02-modeling.ipynb
+++ b/code/02-modeling.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "#### DBSCAN\n",
     "\n",
-    "Clustering plays an important part in this project - it will provide the basis for the suggestion engine later. To create the best possible clustering model, I will need to have a rough estimate of the number of datapoint clusters. I don't intuitively know the number of clusters necesary since the data has a high degree of dimensionality, so to estimate it I will utilize `DBSCAN` clustering:"
+    "Clustering plays an important part in this project - it will provide the basis for the suggestion engine later. To create the best possible clustering model, I will need to have a rough estimate of the number of datapoint clusters. I don't intuitively know the number of clusters necessary since the data has a high degree of dimensionality, so to estimate it I will utilize `DBSCAN` clustering:"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "id": "80286c7c-d196-4b6a-8288-6605d93cf944",
    "metadata": {},
    "source": [
-    "This score is not great, but that doesn't particularly matter, as this model was instead meant to give a best estimate on the number of clusters needed to represent the data well. The `n_clusters_` of about 70 found here will be indispensible for testing other clustering models, such as KMeans.\n",
+    "This score is not great, but that doesn't particularly matter, as this model was instead meant to give a best estimate on the number of clusters needed to represent the data well. The `n_clusters_` of about 70 found here will be indispensable for testing other clustering models, such as KMeans.\n",
     "\n",
     "#### KMeans"
    ]
@@ -174,7 +174,7 @@
    "id": "2c5a5379-cc94-422c-a5bd-b71181f408b6",
    "metadata": {},
    "source": [
-    "To see if this silouette score can be improved upon, let's try to use a KMeans clustering model:"
+    "To see if this silhouette score can be improved upon, let's try to use a KMeans clustering model:"
    ]
   },
   {
@@ -229,7 +229,7 @@
     "\n",
     "#### Spectral Clustering\n",
     "\n",
-    "In persuit of a better silhoutte score, I will now try using `SpectralClustering`, another clustering model from `scikitlearn`:"
+    "In pursuit of a better silhouette score, I will now try using `SpectralClustering`, another clustering model from `scikitlearn`:"
    ]
   },
   {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 97,
    "id": "3122e216-2f9d-4448-b7bb-a9e3873a0370",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
     "# Iterate over different combinations of hyperparameters \n",
     "def spec_clustering_tuner(data, n_clusters=[6, 10], eigen_solvers=None,\n",
     "                          gammas=[1],\n",
-    "                          assign_labels=None, n_inits=[10], cores=-1, plot=True):\n",
+    "                          assign_labels=None, n_inits=[10], cores=-1):\n",
     "    \"\"\"Takes in lists of hyperparameters to tune over a spectral clustering model as well as scaled data.\n",
     "       Outputs a plot of silhoutte scores against a chosen metric and the best parameters found.\n",
     "    \"\"\"\n",
@@ -333,17 +333,8 @@
     "                        \n",
     "     # Finding the best score\n",
     "    best_model_params = sorted(params.items(), reverse=True)[0]\n",
-    "    \n",
-    "    # Plotting\n",
-    "    if plot:\n",
-    "        plt.figure(figsize=(12,10))\n",
-    "        plt.title('Silhouette Score Against Clustering Metrics', fontsize=18)\n",
-    "        sns.scatterplot(n_clusters, scores, alpha=0.75, ci=None)\n",
-    "        plt.show()\n",
-    "        print(best_model_params)\n",
     "        \n",
-    "    else:\n",
-    "        return best_model_params"
+    "    return best_model_params"
    ]
   },
   {
@@ -461,7 +452,7 @@
    "id": "17f1ec1a-7f94-4f28-a2b1-6ef71899bc36",
    "metadata": {},
    "source": [
-    "Tuning this clustering model has led to an even greater improvement in silhoutte score. This will be the model that I'll use for the recommendation engine."
+    "Tuning this clustering model has led to an even greater improvement in silhouette score. This will be the model that I'll use for the recommendation engine."
    ]
   },
   {
