--- a/code/02-modeling.ipynb
+++ b/code/02-modeling.ipynb
@@ -728,13 +728,13 @@
    "id": "c046e8fc-b400-4ec0-a853-e4701115cd20",
    "metadata": {},
    "source": [
-    "The function above is just a simple proof of concept, but it is an effective proof of concept. Since the query was not very detailed, the suggestions the model made here don't make a lot of sense. In the final version of this model, however, users will be able to make much more precise queries to narrow down their searches. To see this in action, make sure to look at [this script](./plant_recommender.py). This script, `plant_recommender.py`, runs using `streamlit` [(*source*)](https://streamlit.io/)."
+    "The function above is just a simple proof of concept, but it is an effective proof of concept. Since the query was not very detailed, the suggestions the model made here don't make a lot of sense. In the final version of this model, however, users will be able to make much more precise queries to narrow down their searches. To see this in action offline, make sure to look at [this script](./plant_recommender_local.py). The cloud-based version of this script, `plant_recommender_st.py`, runs using `streamlit` [(*source*)](https://streamlit.io/). The app can be found [here.](https://share.streamlit.io/josephh867/plant-recommender/main/code/plant_recommender_st.py)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -748,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
